--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,12 +4,12 @@ server {
 
     server_name localhost;
 
-    location / {
+    location = / {
         root /usr/share/nginx/html;
         index index.html index.htm;
     }
 
-    location /health-check {
+    location = /health-check {
         alias /usr/share/nginx/html;
         index index.html index.htm;
     }
