--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - "./conf:/etc/nginx/conf.d"
-      - "./images:/opt/app/images"
+      - ./conf/:/etc/nginx/conf.d/
+      - ./images/:/opt/app/images/
+      - ./nginx-cache/:/var/cache/nginx/
+      - ./nginx-pid/:/var/run/
+    read_only: true
